fix size of the cutoff text